--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
             </div>
             <div class="col-lg-4 text-center text-lg-end">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <a href="#"><small class="me-3 text-light"><i class="fa fa-user me-2"></i>Register</small></a>
+                    <a href="register.html"><small class="me-3 text-light"><i class="fa fa-user me-2"></i>Register</small></a>
                     <a href="login.html"><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>Login</small></a>
                 
                     <div class="dropdown">
@@ -91,26 +91,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="services.html" class="nav-item nav-link">Services</a>
-                    <a href="packages.html" class="nav-item nav-link">Packages</a>
-                    <a href="blog.html" class="nav-item nav-link">Blog</a>
+                   <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About us</a>
+                    <a href="ourvision.html" class="nav-item nav-link">Our vision</a>
+                    <a href="packages.html" class="nav-item nav-link">Our tour packages</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Upcoming Tours</a>
                         <div class="dropdown-menu m-0">
-                            <a href="destination.html" class="dropdown-item">Destination</a>
-                            <a href="tour.html" class="dropdown-item">Explore Tour</a>
-                            <a href="booking.html" class="dropdown-item">Travel Booking</a>
-                            <a href="gallery.html" class="dropdown-item">Our Gallery</a>
-                            <a href="guides.html" class="dropdown-item">Travel Guides</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            <a href="404.html" class="dropdown-item">404 Page</a>
+                            <a href="tour.html" class="dropdown-item">Tours</a>
+                             <a href="gallery.html" class="dropdown-item">Gallery</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Book Now</a>
+                <a href="" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Booking</a>
             </div>
         </nav>
     <!-- Navbar & Hero End -->
