--- a/ourvision.html
+++ b/ourvision.html
@@ -80,11 +80,12 @@
 
     <!-- Navbar & Hero Start -->
     <div class="container-fluid position-relative p-0">
+       <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-           <a href="" class="navbar-brand d-flex align-items-center sticky-top.navbar-light navbar-nav nav-link">
-        <img src="img/Website_Logo.jpg" alt="Logo" class="logo-img me-2" style="border-radius: 100%; width:65px; height: 100px;">
-        <span class="logo-text" style="color:#fff; font-weight: 800;">HOLYLAND PILGRIMAGE TOURS (OPC)</span>
-    </a>
+            <a href="" class="navbar-brand p-0">
+                <h3 class="m-0"><img src="img/Website_Logo.jpg" alt="Logo" class="logo-img me-2"
+                        style="border-radius: 100%; width:65px; height: 100px;">HOLYLAND PILGRIMAGE TOURS</h3>
+                <!-- <img src="img/logo.png" alt="Logo"> -->
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -94,12 +95,11 @@
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About us</a>
                     <a href="ourvision.html" class="nav-item nav-link">Our vision</a>
-                    <a href="packages.html" class="nav-item nav-link">Our tour packages</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Upcoming Tours</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Tours</a>
                         <div class="dropdown-menu m-0">
-                            <a href="tour.html" class="dropdown-item">Tours</a>
-                             <a href="gallery.html" class="dropdown-item">Gallery</a>
+                            <a href="upcomingtour.html" class="dropdown-item">Upcomin Tours</a>
+                            <a href="packages.html" class="dropdown-item">Our Tour Packages</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact us</a>
