--- a/index.html
+++ b/index.html
@@ -114,15 +114,36 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img src="img/carousel-2.jpg" class="img-fluid" alt="Image">
+                        <img src="img/Jerusalem 2.png" class="img-fluid" alt="Image">
                         <div class="carousel-caption">
                             <div class="p-3" style="max-width: 900px;">
                                 <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore
                                     The World</h4>
                                 <h1 class="display-2 text-capitalize text-white mb-4">Let's The World Together!</h1>
-                                <p class="mb-5 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the
-                                    1500s,
+                                <p class="mb-5 fs-5">HolyLand Pilgrimage Tours (OPC) offers spiritually enriching
+                                    journeys through sacred sites across Israel and the Holy Land. Each tour is
+                                    carefully designed to deepen faith, foster reflection, and connect travelers to
+                                    biblical history.
+                                </p>
+                                <div class="d-flex align-items-center justify-content-center">
+                                    <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5"
+                                        href="#">Discover Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Europe_crousel.jpg" class="img-fluid" alt="Image">
+                        <div class="carousel-caption">
+                            <div class="p-3" style="max-width: 900px;">
+                                <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore
+                                    The World</h4>
+                                <h1 class="display-2 text-capitalize text-white mb-4">Find Your Perfect Tour At Travel
+                                </h1>
+                                <p class="mb-5 fs-5">HolyLand Pilgrimage Tours (OPC) offers spiritually enriching
+                                    journeys through sacred sites across Israel and the Holy Land. Each tour is
+                                    carefully designed to deepen faith, foster reflection, and connect travelers to
+                                    biblical history.
                                 </p>
                                 <div class="d-flex align-items-center justify-content-center">
                                     <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5"
@@ -137,29 +158,11 @@
                             <div class="p-3" style="max-width: 900px;">
                                 <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore
                                     The World</h4>
-                                <h1 class="display-2 text-capitalize text-white mb-4">Find Your Perfect Tour At Travel
-                                </h1>
-                                <p class="mb-5 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the
-                                    1500s,
-                                </p>
-                                <div class="d-flex align-items-center justify-content-center">
-                                    <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5"
-                                        href="#">Discover Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/carousel-3.jpg" class="img-fluid" alt="Image">
-                        <div class="carousel-caption">
-                            <div class="p-3" style="max-width: 900px;">
-                                <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore
-                                    The World</h4>
                                 <h1 class="display-2 text-capitalize text-white mb-4">You Like To Go?</h1>
-                                <p class="mb-5 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the
-                                    1500s,
+                                <p class="mb-5 fs-5">HolyLand Pilgrimage Tours (OPC) offers spiritually enriching
+                                    journeys through sacred sites across Israel and the Holy Land. Each tour is
+                                    carefully designed to deepen faith, foster reflection, and connect travelers to
+                                    biblical history.
                                 </p>
                                 <div class="d-flex align-items-center justify-content-center">
                                     <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5"
@@ -609,23 +612,18 @@
             <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                 <h5 class="section-title px-3">Explore Tour</h5>
                 <h1 class="mb-4">The World</h1>
-                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tempore nam, architecto
-                    doloremque velit explicabo? Voluptate sunt eveniet fuga eligendi! Expedita laudantium fugiat
-                    corrupti eum cum repellat a laborum quasi.
+                <p class="mb-0">Explore a travel tour with Holy Land Pilgrimage Tours and experience a deeply spiritual
+                    journey through the sacred sites of the Holy Land, thoughtfully designed to inspire faith and
+                    reflection.
                 </p>
             </div>
             <div class="tab-class text-center">
                 <ul class="nav nav-pills d-inline-flex justify-content-center mb-5">
                     <li class="nav-item">
-                        <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill active"
-                            data-bs-toggle="pill" href="#NationalTab-1">
-                            <span class="text-dark" style="width: 250px;">National Tour Category</span>
-                        </a>
-                    </li>
                     <li class="nav-item">
-                        <a class="d-flex py-2 mx-3 border border-primary bg-light rounded-pill" data-bs-toggle="pill"
-                            href="#InternationalTab-2">
-                            <span class="text-dark" style="width: 250px;">International tour Category</span>
+                        <a class="d-flex py-2 mx-3 border border-primary bg-light rounded-pill active"
+                            data-bs-toggle="pill" href="#InternationalTab-2">
+                            <span class="text-dark" style="width: 250px;">Upcoming tour Category</span>
                         </a>
                     </li>
                 </ul>
@@ -1423,11 +1421,12 @@
             </div>
         </div>
     </div>
+    
     <!-- Tour Booking End -->
 
     <!-- Travel Guide Start -->
-    <div class="container-fluid guide py-5">
-        <div class="container py-5">
+    <!-- <div class="container-fluid guide py-5">
+        
             <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                 <h5 class="section-title px-3">Travel Guide</h5>
                 <h1 class="mb-0">Meet Our Guide</h1>
@@ -1535,7 +1534,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>  -->
     <!-- Travel Guide End -->
 
     <!-- Blog Start -->
@@ -1636,7 +1635,7 @@
     </div>
     <!-- Blog End -->
     <!-- Subscribe Start -->
-    <div class="container-fluid subscribe py-5">
+    <!-- <div class="container-fluid subscribe py-5">
         <div class="container text-center py-5">
             <div class="mx-auto text-center" style="max-width: 900px;">
                 <h5 class="subscribe-title px-3">Subscribe</h5>
@@ -1653,7 +1652,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Subscribe End -->
     <!-- Footer Start -->
     <div class="container-fluid footer py-5">
@@ -1753,14 +1752,16 @@
         <div class="container">
             <div class="row g-4 align-items-center">
                 <div class="col-md-6 text-center text-md-end mb-md-0">
-                    <i class="fas fa-copyright me-2"></i><a class="text-white" href="https://hupu496.github.io/techsparrow/">Your Site Name</a>, All right
+                    <i class="fas fa-copyright me-2"></i><a class="text-white"
+                        href="https://hupu496.github.io/techsparrow/">Your Site Name</a>, All right
                     reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-start">
                     <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                     <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                     <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                    Designed By <a class="text-white" href="https://hupu496.github.io/techsparrow/">TechSparrow Software Solutions</a>
+                    Designed By <a class="text-white" href="https://hupu496.github.io/techsparrow/">TechSparrow Software
+                        Solutions</a>
                 </div>
             </div>
         </div>
