--- a/ourvision.html
+++ b/ourvision.html
@@ -132,12 +132,12 @@
                     <div class="col-lg-5">
                         <div class="h-100"
                             style="border: 50px solid; border-color: transparent #13357B transparent #13357B;">
-                            <img src="img/about-img.jpg" class="img-fluid w-100 h-100" alt="">
+                            <img src="img/Traveling GIF.gif" class="img-fluid w-100 h-100" alt="">
                         </div>
                     </div>
                     <div class="col-lg-7"
                         style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
-                        <h5 class="section-about-title pe-3">Our mission</h5>
+                        <h5 class="section-about-title pe-3">Our vision</h5>
                         <h1 class="mb-4">At <span class="text-primary">Holy Land Pilgrimage Tours (OPC)</span></h1>
                         <p class="mb-4">our vision is to be the foremost provider of enriching and transformative
                             pilgrimage experiences to the Holy Land and revered European pilgrimage sites. We are
@@ -158,7 +158,7 @@
                     <div class="col-lg-5">
                         <div class="h-100"
                             style="border: 50px solid; border-color: transparent #13357B transparent #13357B;">
-                            <img src="img/about-img.jpg" class="img-fluid w-100 h-100" alt="">
+                            <img src="img/Travel 2 GIF.gif" class="img-fluid w-100 h-100" alt="">
                         </div>
                     </div>
                     <div class="col-lg-7"
