--- a/starter-page.html
+++ b/starter-page.html
@@ -42,10 +42,12 @@
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Tour</h1>
-      </a>
+  <img 
+    src="assets/img/logo_2-removebg.png" 
+    alt="Holyland Pilgrimage Tours Logo" 
+    class="logo-img"
+  >
+</a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
