--- a/about.html
+++ b/about.html
@@ -41,56 +41,40 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Tour</h1>
-      </a>
+      
+   <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+  <img 
+    src="assets/img/logo_2-removebg.png" 
+    alt="Holyland Pilgrimage Tours Logo" 
+    class="logo-img"
+  >
+</a>
 
-      <nav id="navmenu" class="navmenu">
+     <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="destinations.html">Destinations</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <!-- <li><a href="destinations.html">Destinations</a></li> -->
           <li><a href="tours.html">Tours</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>More Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <!-- <li><a href="blog.html">Blog</a></li> -->
+          <li class="dropdown"><a href="#"><span>Our Tour Packages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="destination-details.html">Destination Details</a></li>
+              <li><a href="destination-details.html">Upcoming Tours</a></li>
               <li><a href="tour-details.html">Tour Details</a></li>
               <li><a href="booking.html">Booking</a></li>
-              <li><a href="testimonials">Testimonials</a></li>
               <li><a href="faq.html">Frequently Asked Questions</a></li>
-              <li><a href="blog-details.html">Blog Details</a></li>
+              <!-- <li><a href="blog-details.html">Blog Details</a></li> -->
               <li><a href="terms.html">Terms</a></li>
               <li><a href="privacy.html">Privacy</a></li>
-              <li><a href="404.html">404</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <!-- <li><a href="contact.html">Contact</a></li> -->
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="destiantios.html">Get Started</a>
+      <a class="btn-getstarted" href="contact.html">Contact</a>
 
     </div>
   </header>
@@ -98,18 +82,30 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/travel/showcase-8.webp);">
-      <div class="container position-relative">
-        <h1>About</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
-        <nav class="breadcrumbs">
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">About</li>
-          </ol>
-        </nav>
-      </div>
-    </div><!-- End Page Title -->
+   <div class="page-title dark-background video-bg" data-aos="fade">
+
+  <!-- Background Video -->
+  <video autoplay muted loop playsinline class="bg-video">
+    <source src="assets/img/gallery/video_9.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- Content -->
+  <div class="container position-relative">
+    <h1>About</h1>
+    <p>
+      Holy Land Pilgrimage Tours (OPC) Pvt Ltd., an initiative by Shri Ranjit Toppo, specializes in organizing pilgrimage tours to the Holy Land and Europe, focusing on significant Christian pilgrimage sites. 
+    </p>
+
+    <nav class="breadcrumbs">
+      <ol>
+        <li><a href="index.html">Home</a></li>
+        <li class="current">About</li>
+      </ol>
+    </nav>
+  </div>
+
+</div><!-- End Page Title -->
 
     <!-- Travel About Section -->
     <section id="travel-about" class="travel-about section">
@@ -120,27 +116,32 @@
           <div class="col-lg-8 mx-auto text-center mb-5">
             <div class="intro-content" data-aos="fade-up" data-aos-delay="200">
               <h2>Redefining Travel,<br>One Adventure at a Time</h2>
-              <p class="lead">Born from a love of exploration and discovery, we've spent the last decade turning wanderlust into life-changing experiences for adventurous souls around the globe.</p>
+              <p class="lead">Committed to providing enriching spiritual experiences, the company aims to expand its offerings to other countries and also include leisure trips, catering to a broader audience seeking both religious and recreational travel experiences.</p>
             </div>
           </div>
         </div>
 
         <div class="row align-items-center mb-5">
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="300">
-            <div class="hero-image">
-              <img src="assets/img/travel/showcase-7.webp" class="img-fluid" alt="Travel Adventure">
-              <div class="floating-stats">
-                <div class="stat-item">
-                  <span class="number">50+</span>
-                  <span class="label">Countries</span>
-                </div>
-                <div class="stat-item">
-                  <span class="number">15K</span>
-                  <span class="label">Happy Travelers</span>
-                </div>
-              </div>
-            </div>
-          </div>
+  <div class="hero-image">
+    <video class="img-fluid" autoplay muted loop playsinline>
+      <source src="assets/img/gallery/video_6.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+
+    <div class="floating-stats">
+      <div class="stat-item">
+        <span class="number">50+</span>
+        <span class="label">Countries</span>
+      </div>
+      <div class="stat-item">
+        <span class="number">15K</span>
+        <span class="label">Happy Travelers</span>
+      </div>
+    </div>
+  </div>
+</div>
+
 
           <div class="col-lg-6 offset-lg-1" data-aos="slide-left" data-aos-delay="400">
             <div class="story-content">
@@ -158,7 +159,9 @@
                 </div>
                 <div class="mission-text">
                   <h4>Our Vision</h4>
-                  <p>"To make the world more connected and compassionate, one meaningful journey at a time."</p>
+                 <p>"our vision is to be the foremost provider of enriching and transformative pilgrimage experiences to the Holy Land and revered European pilgrimage sites. We are dedicated to creating journeys that not only explore the sacred and historical landmarks of these holy destinations but also deepen the spiritual connection and faith of every pilgrim. Through our thoughtfully curated tours, we aim to foster personal reflection, spiritual growth, and a profound sense of community, guiding each traveller closer to God. Our mission is to inspire a renewed commitment to faith, offering a journey that touches the soul and leaves an indelible mark on the heart.
+
+"</p>
                 </div>
               </div>
             </div>
@@ -365,43 +368,45 @@
       </div>
     </div>
 
-    <div class="container footer-top">
+     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="d-flex align-items-center">
             <span class="sitename">Tour</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>H. No. 17, Sector-6, Pocket-1, DDA SFS</p>
+            <p>Dwarka, New Delhi-110075</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>9891318913 & 9810576406</span></p>
+            <p><strong>Email:</strong> <span>ranjittoppo63@gmail.com, jancy.johnson1@outlook.com</span></p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Quick Links</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="about.html">About</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="tours.html">Tours</a></li>
+             <li><i class="bi bi-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="terms.html">Terms</a></li>
+             <li><i class="bi bi-chevron-right"></i> <a href="privacy.html">Privacy</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="tour-details.html">Tour Details</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="destination-details.html">Upcoming Tours</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="booking.html">Booking</a></li>
+             <li><i class="bi bi-chevron-right"></i> <a href="faq.html">Frequently Asked Question</a></li>
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-12">
           <h4>Follow Us</h4>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+          <!-- <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p> -->
           <div class="social-links d-flex">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
@@ -420,7 +425,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href=>TechSparrow</a>
       </div>
     </div>
 
