--- a/blog-details.html
+++ b/blog-details.html
@@ -41,11 +41,14 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Tour</h1>
-      </a>
+     
+   <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+  <img 
+    src="assets/img/logo_2-removebg.png" 
+    alt="Holyland Pilgrimage Tours Logo" 
+    class="logo-img"
+  >
+</a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
